移动版界面开发

--- a/site/m-checkout-choose.html
+++ b/site/m-checkout-choose.html
@@ -42,23 +42,8 @@
         </ul>
     </div>
 
-    <div class="m-modify-name mb0-6">
-        支付方式
-    </div>
-    <div class="choose-checkout-style">
-        <ul>
-            <li class="select">在线支付</li>
-        </ul>
-    </div>
 
-    <div class="m-modify-name mb0-6 mt1">
-        配送方式
-    </div>
-    <div class="choose-checkout-style">
-        <ul>
-            <li class="select">加配送费10元</li>
-        </ul>
-    </div>
+
 
     <div class="m-modify-name mb0-6 mt1">
         送货时间
@@ -76,10 +61,20 @@
     </div>
     <div class="choose-checkout-style">
         <ul>
-            <li class="select">个人发票</li>
-            <li>电子发票</li>
-            <li>单位发票</li>
+            <li class="select">无发票</li>
+            <li>个人发票</li>
+            <li>
+                单位发票
+                <input class="m-input ml1 m-input-border" style="width: 72%" type="text" placeholder="请填写公司名称">
+            </li>
         </ul>
+    </div>
+
+    <div class="m-modify-name mb0-6 mt1">
+        支付方式
+    </div>
+    <div class="m-choose-brief-detail">
+        在线支付，免运费
     </div>
 
 
