--- a/site/m-center.html
+++ b/site/m-center.html
@@ -26,17 +26,11 @@
 <div class="content">
     <div class="m-center-partOne">
         <ul>
-            <a href="m-order-search.html">
-                <li>
-                    <div class="icon-search"></div>
-                    <div class="inlinebl">订单查询</div>
-                    <div class="icon-angle-right"></div>
-                </li>
-            </a>
+
             <a href="m-order-search.html">
                 <li>
                     <div class="icon-file-alt"></div>
-                    <div class="inlinebl">待付款订单</div>
+                    <div class="inlinebl">订单管理</div>
                     <div class="icon-angle-right"></div>
                 </li>
             </a>
@@ -54,14 +48,6 @@
                     <div class="icon-angle-right"></div>
                 </li>
             </a>
-            <a href="m-shoucan.html">
-                <li>
-                    <div class="icon-heart-empty"></div>
-                    <div class="inlinebl">我的收藏</div>
-                    <div class="icon-angle-right"></div>
-                </li>
-            </a>
-
         </ul>
     </div>
 </div>
