--- a/product/m-product-detail.html
+++ b/product/m-product-detail.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
-    <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/m-product.css">
 </head>
 <body>
+
+<!--header-->
 <nav>
     <div class="icon-home icon-home-appearance icon-active" ></div>
     <h3 class=" head-title-appearance">中国道</h3>
@@ -30,6 +31,29 @@
     </div>
 </div>
 
+<!--tab切换页-->
+<div id="tab-container" class='tab-container'>
+    <ul class='etabs'>
+        <li class='tab'><a href="#tabs1-html">HTML Markup</a></li>
+        <li class='tab'><a href="#tabs1-js">Required JS</a></li>
+        <li class='tab'><a href="#tabs1-css">Example CSS</a></li>
+    </ul>
+    <div class='panel-container'>
+        <div id="tabs1-html">
+            <h2>HTML Markup for these tabs</h2>
+        </div>
+
+        <div id="tabs1-js">
+            <h2>JS for these tabs</h2>
+        </div>
+
+        <div id="tabs1-css">
+            <h2>CSS Styles for these tabs</h2>
+        </div>
+    </div>
+</div>
+
+<!--footer-->
 <div class="footer">
     <div>
         <span>
@@ -40,5 +64,13 @@
         </span>
     </div>
 </div>
+<script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
+<script src="js/jquery.hashchange.min.js" type="text/javascript"></script>
+<script src="js/jquery.easytabs.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+    $(document).ready( function() {
+        $('#tab-container').easytabs();
+    });
+</script>
 </body>
 </html>
