--- a/product/test.html
+++ b/product/test.html
@@ -1,24 +1,52 @@
-<style>
-    .userStyle{  //您可以按照您的页面需要，自主定义外套样式，给您更大的灵活性
-    width:100%;
-        height:30px;
-        background:#ccc;
-        display:block;
-    }
-</style>
-<div class="userStyle">
-    <!-- Baidu Button BEGIN -->
-    <div id="bdshare" class="bdshare_t bds_tools get-codes-bdshare">
-        <a class="bds_tsina"></a>
+<html>
+<head>
+    <title>EasyTabs Demo</title>
+
+
+    <style>
+        /* tab切换页 */
+        .etabs { margin: 0; padding: 0; }
+        .tab { display: inline-block; zoom:1; *display:inline; background: #eee; border: solid 1px #999; border-bottom: none; -moz-border-radius: 4px 4px 0 0; -webkit-border-radius: 4px 4px 0 0; }
+        .tab a { font-size: 14px; line-height: 2em; display: block; padding: 0 10px; outline: none; }
+        .tab a:hover { text-decoration: underline; }
+        .tab.active { background: #fff; padding-top: 6px; position: relative; top: 1px; border-color: #666; }
+        .tab a.active { font-weight: bold; }
+        .tab-container .panel-container { background: #fff; border: solid #666 1px; padding: 10px; -moz-border-radius: 0 4px 4px 4px; -webkit-border-radius: 0 4px 4px 4px; }
+        .panel-container { margin-bottom: 10px; }
+    </style>
+
+
+</head>
+<body>
+
+
+<div id="tab-container" class='tab-container'>
+    <ul class='etabs'>
+        <li class='tab'><a href="#tabs1-html">HTML Markup</a></li>
+        <li class='tab'><a href="#tabs1-js">Required JS</a></li>
+        <li class='tab'><a href="#tabs1-css">Example CSS</a></li>
+    </ul>
+    <div class='panel-container'>
+        <div id="tabs1-html">
+            <h2>HTML Markup for these tabs</h2>
+        </div>
+
+        <div id="tabs1-js">
+            <h2>JS for these tabs</h2>
+        </div>
+
+        <div id="tabs1-css">
+            <h2>CSS Styles for these tabs</h2>
+        </div>
     </div>
-    <script type="text/javascript" id="bdshare_js" data="type=tools" ></script>
-    <script type="text/javascript" id="bdshell_js"></script>
-    <<script type="text/javascript">
-    //在这里定义bds_config
-    var bds_config = {'snsKey':{'tsina':'2106128267'},
-    {'bdText':'这里写入您想要自定义的分享内容'
-    };
-    document.getElementById('bdshell_js').src = "http://bdimg.share.baidu.com/static/js/shell_v2.js?cdnversion=" + Math.ceil(new Date()/3600000);
-</script>
-    <!-- Baidu Button END -->
 </div>
+<script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
+<script src="js/jquery.hashchange.min.js" type="text/javascript"></script>
+<script src="js/jquery.easytabs.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+    $(document).ready( function() {
+        $('#tab-container').easytabs();
+    });
+</script>
+</body>
+</html>
