--- a/product/m-product-detail.html
+++ b/product/m-product-detail.html
@@ -15,6 +15,9 @@
 <nav>
     <div class="icon-home icon-home-appearance icon-active" ></div>
     <h3 class=" head-title-appearance">中国道</h3>
+    <a href="../site/m-center.html">
+        <div class="icon-user icon-user-appearance icon-active"></div>
+    </a>
     <a href="../site/m-shoppingCart.html">
         <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
     </a>
@@ -23,7 +26,7 @@
 <div class="m-product-content">
     <div class="m-product-title">中国道中国道</div>
     <div class="m-product-detail">中国道是国馆首款收藏级文化白酒</div>
-    <div class="m-product-price">$2666</div>
+    <div class="m-product-price">￥2666</div>
     <div class="m-button width100 mt1">
         <div class="m-button-content">
             立即购买
@@ -34,21 +37,27 @@
 <!--tab切换页-->
 <div id="tab-container" class='tab-container'>
     <ul class='etabs'>
-        <li class='tab'><a href="#tabs1-html">HTML Markup</a></li>
-        <li class='tab'><a href="#tabs1-js">Required JS</a></li>
-        <li class='tab'><a href="#tabs1-css">Example CSS</a></li>
+        <li class='tab'><a href="#tabs1-html">概述</a></li>
+        <li class='tab'><a href="#tabs1-js">参数</a></li>
+        <li class='tab'><a href="#tabs1-css">故事</a></li>
     </ul>
     <div class='panel-container'>
         <div id="tabs1-html">
-            <h2>HTML Markup for these tabs</h2>
+            <div class="product-detail-one">
+                <img src="images/1-01.jpg" style="width: 100%">
+            </div>
         </div>
 
         <div id="tabs1-js">
-            <h2>JS for these tabs</h2>
+            <div class="product-data-one">
+                <img src="images/1-01.jpg" style="width: 100%">
+            </div>
         </div>
 
         <div id="tabs1-css">
-            <h2>CSS Styles for these tabs</h2>
+            <div class="product-story-one">
+                <img src="images/1-01.jpg" style="width: 100%">
+            </div>
         </div>
     </div>
 </div>
