--- a/product/test.html
+++ b/product/test.html
@@ -22,9 +22,9 @@
 
 <div id="tab-container" class='tab-container'>
     <ul class='etabs'>
-        <li class='tab'><a href="#tabs1-html">HTML Markup</a></li>
-        <li class='tab'><a href="#tabs1-js">Required JS</a></li>
-        <li class='tab'><a href="#tabs1-css">Example CSS</a></li>
+        <li class='tab'><a href="#tabs1-html">概述</a></li>
+        <li class='tab'><a href="#tabs1-js">参数</a></li>
+            <li class='tab'><a href="#tabs1-css">故事</a></li>
     </ul>
     <div class='panel-container'>
         <div id="tabs1-html">
