--- a/product/m-product-detail.html
+++ b/product/m-product-detail.html
@@ -46,17 +46,44 @@
             <div class="product-detail-one">
                 <img src="images/1-01.jpg" style="width: 100%">
             </div>
+            <div class="product-detail-two">
+                <img src="images/mitv-conc-01.jpg" style="width: 100%">
+            </div>
+            <div class="product-detail-three">
+                <img src="images/mitv-cond-02.jpg" style="width: 100%">
+            </div>
+            <div class="product-detail-four">
+                <img src="images/mitv-conf-01.jpg" style="width: 100%">
+            </div>
         </div>
 
         <div id="tabs1-js">
             <div class="product-data-one">
                 <img src="images/1-01.jpg" style="width: 100%">
             </div>
+            <div class="product-data-two">
+                <img src="images/mitv-conc-01.jpg" style="width: 100%">
+            </div>
+            <div class="product-data-three">
+                <img src="images/mitv-cond-02.jpg" style="width: 100%">
+            </div>
+            <div class="product-data-four">
+                <img src="images/mitv-conf-01.jpg" style="width: 100%">
+            </div>
         </div>
 
         <div id="tabs1-css">
             <div class="product-story-one">
                 <img src="images/1-01.jpg" style="width: 100%">
+            </div>
+            <div class="product-story-two">
+                <img src="images/mitv-conc-01.jpg" style="width: 100%">
+            </div>
+            <div class="product-story-three">
+                <img src="images/mitv-cond-02.jpg" style="width: 100%">
+            </div>
+            <div class="product-story-four">
+                <img src="images/mitv-conf-01.jpg" style="width: 100%">
             </div>
         </div>
     </div>
