--- a/site/m-shoppingCart.html
+++ b/site/m-shoppingCart.html
@@ -20,55 +20,71 @@
     </a>
 </nav>
 
-<div class="content">
-    <div class="m-shopping-cart">
-        <ul class="m-choose-product">
-            <li>
-                <a href="m-shoppingCart-modify.html">
-                    <div class="m-choose-image">
-                        <img src="image/mytiem.png">
+<div class="m-shopping-cart-new mb2">
+    <ul class="m-choose-product-new">
+        <li>
+            <div class="fl" style="width: 70%">
+                <div class="m-choose-detail">
+                    <div class="m-choose-title">
+                        中国道中国道
                     </div>
-                    <div class="m-choose-detail">
-                        <div class="m-choose-title">
-                            中国道中国道
-                        </div>
-                        <div class="m-choose-brief-detail">
-                            售价：￥2666 &nbsp;数量：1 &nbsp;小计：￥2666
-                        </div>
+                    <div class="m-choose-brief-detail">
+                        第一次，重新定义白酒
                     </div>
-                    <div class="icon-angle-right icon-angle-right-appearance"></div>
-                    <div class="clear"></div>
-                </a>
-            </li>
-            <li>
-                <a href="m-shoppingCart-modify.html">
-                    <div class="m-choose-image">
-                        <img src="image/mytiem.png">
+                </div>
+                <div class="m-choose-detail m-product-number">
+                    <div>
+                        <span class="m-product-label">数量：</span>
+                        <span class="m-product-label color-f66900"  style="font-weight: bold">1</span>
                     </div>
-                    <div class="m-choose-detail">
-                        <div class="m-choose-title">
-                            中国道中国道
-                        </div>
-                        <div class="m-choose-brief-detail">
-                            售价：￥2666 &nbsp;数量：1 &nbsp;小计：￥2666
-                        </div>
+                    <div>
+                        <span class="m-product-label">小计：</span>
+                        <span class="m-product-label color-f66900" style="font-weight: bold">￥2666</span>
                     </div>
-                    <div class="icon-angle-right icon-angle-right-appearance"></div>
-                    <div class="clear"></div>
-                </a>
-            </li>
-        </ul>
-    </div>
+                </div>
+            </div>
+
+            <div class="m-choose-detail-next">
+                <div class="icon-plus icon-minus-adjust">
+                </div>
+                <div class="icon-minus icon-minus-adjust">
+                </div>
+            </div>
+            <div class="clear"></div>
+        </li>
+    </ul>
 </div>
 
-<div class="m-shopping-checkout">
+<div class="content">
+    <div class="m-modify-name mb0-6">
+        收货信息
+    </div>
+    <ul class="m-choose-product">
+        <li>
+            <a href="m-address-confirm.html">
+                <div class="m-choose-detail m-address-display">
+                    <div class="m-choose-title">
+                        广东省广州市天河区
+                    </div>
+                    <div class="m-choose-brief-detail">
+                        华明路13华普广场东塔702（518129）谢奇 18503014025
+                    </div>
+                </div>
+                <div class="icon-angle-right icon-angle-right-appearance" style="padding-right:1rem"></div>
+                <div class="clear"></div>
+            </a>
+        </li>
+    </ul>
+</div>
+
+<div class="m-check-pay-area">
     <div class="m-check-total-money">
         金额合计<span>￥5332</span>
     </div>
-    <a href="m-checkout-choose.html">
+    <a href="m-online-pay.html">
         <div class="m-button m-button-check">
             <div class="m-button-content">
-                结算
+                立即支付
             </div>
         </div>
     </a>
