--- a/site/m-address-confirm.html
+++ b/site/m-address-confirm.html
@@ -50,6 +50,22 @@
         </ul>
     </div>
 
+    <div class="m-shopping-cart">
+        <ul class="m-choose-product m-address-add-button">
+            <li>
+                <a href="m-address-add.html">
+                    <div class="m-choose-detail m-address-display">
+                        <div>
+                            添加新地址
+                        </div>
+                    </div>
+                    <div class="icon-angle-right icon-angle-right-appearance icon-angle-right-address"></div>
+                    <div class="clear"></div>
+                </a>
+            </li>
+        </ul>
+    </div>
+
     <a href="m-order-submit.html">
         <div class="m-button mt3" style="width: 100%">
             <div class="m-button-content">
