--- a/site/m-online-pay.html
+++ b/site/m-online-pay.html
@@ -20,7 +20,7 @@
 
 <div class="content m-order-detail-content m-online-detail-content">
     <div class="m-order-detail-partOne m-online-payOne">
-         <i class="icon-ok"></i>订单提交成功，请尽快完成支付
+         <i class="icon-ok"></i>付款成功，感谢您的关注！
     </div>
     <div class="m-order-detail-partTwo">
         <div class="ml1">
@@ -28,10 +28,8 @@
             <div><span class="order-title-label">收货人称</span><span>谢奇</span></div>
             <div><span class="order-title-label">手机号码</span><span>18503014025</span></div>
             <div><span class="order-title-label">收货地址</span><span>广东广州市天河区华明路13华普广场东塔702</span></div>
-            <div><span class="order-title-label">送货时间</span><span>不限</span></div>
-            <div><span class="order-title-label">发票类型</span><span>电子发票</span></div>
-            <div><span class="order-title-label">发票抬头</span><span>个人</span></div>
-            <div><span class="order-title-label">应付金额</span><span class="color-f66900">￥5332</span></div>
+            <div><span class="order-title-label">发票类型</span><span>无</span></div>
+            <div><span class="order-title-label">付款金额</span><span class="color-f66900">￥5332</span></div>
         </div>
     </div>
     <div class="m-order-detail-partThree">
@@ -46,18 +44,9 @@
 </div>
 
 <div class="content">
-    <div class="m-modify-name mb0-6">
-        在线支付方式
-    </div>
-    <div>
-        <select class="select-appearance">
-            <option>支付宝</option>
-            <option>微信支付</option>
-        </select>
-    </div>
     <div class="m-button mt1" style="width: 100%">
         <div class="m-button-content">
-            立即支付
+            索要发票
         </div>
     </div>
 </div>
