购物车等页面修改

--- a/site/m-online-pay.html
+++ b/site/m-online-pay.html
@@ -20,7 +20,7 @@
 
 <div class="content m-order-detail-content m-online-detail-content">
     <div class="m-order-detail-partOne m-online-payOne">
-         <i class="icon-ok"></i>付款成功，感谢您的关注！
+         <i class="icon-ok"></i>已成功付款，感谢您的支持！
     </div>
     <div class="m-order-detail-partTwo">
         <div class="ml1">
@@ -35,20 +35,22 @@
     <div class="m-order-detail-partThree">
 
         <div class=" mt1 ml1-8">
-            <div class="m-choose-brief-detail">
+          <!--  <div class="m-choose-brief-detail">
                 *请尽快完成支付，超过时间订单会被自动取消
-            </div>
+            </div>-->
         </div>
         <div class="clear"></div>
     </div>
 </div>
 
 <div class="content">
-    <div class="m-button mt1" style="width: 100%">
-        <div class="m-button-content">
-            索要发票
+    <a href="m-get-invoice.html">
+        <div class="m-button mt1" style="width: 100%">
+            <div class="m-button-content">
+                索要发票
+            </div>
         </div>
-    </div>
+    </a>
 </div>
 
 
