--- a/site/m-order-search.html
+++ b/site/m-order-search.html
@@ -21,27 +21,7 @@
     <div class="m-shopping-cart">
         <ul class="m-choose-product">
             <li>
-                <a href="m-order-detail.html">
-                    <div class="m-choose-image">
-                        <img src="image/mytiem.png">
-                    </div>
-                    <div class="m-choose-detail">
-                        <div class="m-choose-title mt1">
-                            订单日期：2014/4/22
-                        </div>
-                        <div class="m-choose-brief-detail">
-                            订单编号：50599950005999588
-                        </div>
-                        <div class="m-choose-brief-detail">
-                            总价：￥2666 <span class="m-order-unpay ml1">订单状态：等待付款</span>
-                        </div>
-                    </div>
-                    <div class="icon-angle-right icon-angle-right-appearance"></div>
-                    <div class="clear"></div>
-                </a>
-            </li>
-            <li>
-                <a href="m-order-detail.html">
+                <a href="m-online-pay.html">
                     <div class="m-choose-image">
                         <img src="image/mytiem.png">
                     </div>
@@ -61,7 +41,7 @@
                 </a>
             </li>
             <li>
-                <a href="m-order-detail.html">
+                <a href="m-online-pay.html">
                     <div class="m-choose-image">
                         <img src="image/mytiem.png">
                     </div>
@@ -73,7 +53,27 @@
                             订单编号：50599950005999588
                         </div>
                         <div class="m-choose-brief-detail">
-                            总价：￥2666 <span class="m-order-expired ml1">订单状态：已过期</span>
+                            总价：￥2666 <span class="m-order-payed ml1">订单状态：已付款</span>
+                        </div>
+                    </div>
+                    <div class="icon-angle-right icon-angle-right-appearance"></div>
+                    <div class="clear"></div>
+                </a>
+            </li>
+            <li>
+                <a href="m-online-pay.html">
+                    <div class="m-choose-image">
+                        <img src="image/mytiem.png">
+                    </div>
+                    <div class="m-choose-detail">
+                        <div class="m-choose-title mt1">
+                            订单日期：2014/4/22
+                        </div>
+                        <div class="m-choose-brief-detail">
+                            订单编号：50599950005999588
+                        </div>
+                        <div class="m-choose-brief-detail">
+                            总价：￥2666 <span class="m-order-payed ml1">订单状态：已付款</span>
                         </div>
                     </div>
                     <div class="icon-angle-right icon-angle-right-appearance"></div>
