--- a/site/m-shoppingCart.html
+++ b/site/m-shoppingCart.html
@@ -23,13 +23,15 @@
 <div class="m-shopping-cart-new mb2">
     <ul class="m-choose-product-new">
         <li>
-            <div class="fl" style="width: 70%">
+            <div class="icon-trash delete-order-button">
+            </div>
+            <div class="fl" style="width: 60%">
                 <div class="m-choose-detail">
                     <div class="m-choose-title">
                         中国道中国道
                     </div>
-                    <div class="m-choose-brief-detail">
-                        第一次，重新定义白酒
+                    <div class="m-choose-brief-detail" style="white-space: nowrap; overflow-x: auto">
+                        第一次，重新定义白酒第一次，重新定义白酒第一次，重新定义白酒第一次，重新定义白酒
                     </div>
                 </div>
                 <div class="m-choose-detail m-product-number">
