--- a/site/m-get-invoice.html
+++ b/site/m-get-invoice.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>在线支付</title>
+    <title>索取发票</title>
     <meta name="viewport" charset="utf-8" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="stylesheet" href="css/base.css">
@@ -10,6 +10,36 @@
     <link rel="stylesheet" href="css/m-cart.css">
 </head>
 <body>
+<nav>
+    <div class="icon-home icon-home-appearance icon-active" ></div>
+    <h3 class=" head-title-appearance">索取发票</h3>
+    <a href="m-shoppingCart.html">
+        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
+    </a>
+</nav>
+
+<div class="content">
+    <div class="m-modify-name mb0-6 mt1">
+        发票信息
+    </div>
+    <div class="choose-checkout-style">
+        <ul>
+            <li class="select">无发票</li>
+            <li>个人发票</li>
+            <li>
+                单位发票
+                <input class="m-input ml1 m-input-border" style="width: 72%" type="text" placeholder="请填写公司名称">
+            </li>
+        </ul>
+    </div>
+    <div class="m-button mt3" style="width: 100%">
+        <div class="m-button-content">
+           确认完成
+        </div>
+    </div>
+</div>
+
+
 <div class="footer">
     <div>
         <span>
