--- a/site/m-shoppingCart.html
+++ b/site/m-shoppingCart.html
@@ -20,10 +20,10 @@
     </a>
 </nav>
 
-<div class="m-shopping-cart-new mb2">
+<div class="m-shopping-cart-new mb0">
     <ul class="m-choose-product-new">
         <li>
-            <div class="icon-trash delete-order-button">
+            <div class="icon-remove-circle delete-order-button">
             </div>
             <div class="fl" style="width: 60%">
                 <div class="m-choose-detail">
@@ -31,16 +31,14 @@
                         中国道中国道
                     </div>
                     <div class="m-choose-brief-detail" style="white-space: nowrap; overflow-x: auto">
-                        第一次，重新定义白酒第一次，重新定义白酒第一次，重新定义白酒第一次，重新定义白酒
+                        第一次，重新定义白酒!
                     </div>
                 </div>
                 <div class="m-choose-detail m-product-number">
                     <div>
-                        <span class="m-product-label">数量：</span>
                         <span class="m-product-label color-f66900"  style="font-weight: bold">1</span>
                     </div>
                     <div>
-                        <span class="m-product-label">小计：</span>
                         <span class="m-product-label color-f66900" style="font-weight: bold">￥2666</span>
                     </div>
                 </div>
@@ -57,27 +55,34 @@
     </ul>
 </div>
 
-<div class="content">
-    <div class="m-modify-name mb0-6">
-        收货信息
-    </div>
-    <ul class="m-choose-product">
-        <li>
-            <a href="m-address-confirm.html">
-                <div class="m-choose-detail m-address-display">
-                    <div class="m-choose-title">
-                        广东省广州市天河区
-                    </div>
-                    <div class="m-choose-brief-detail">
-                        华明路13华普广场东塔702（518129）谢奇 18503014025
-                    </div>
+<ul class="m-choose-product m-choose-product-address">
+    <li>
+        <a href="m-address-confirm.html">
+            <div class="m-choose-detail m-address-display">
+                <div class="m-choose-title">
+                    广东省广州市天河区
                 </div>
-                <div class="icon-angle-right icon-angle-right-appearance" style="padding-right:1rem"></div>
-                <div class="clear"></div>
-            </a>
-        </li>
-    </ul>
-</div>
+                <div class="m-choose-brief-detail">
+                    华明路13华普广场东塔702（518129）谢奇 18503014025
+                </div>
+            </div>
+            <div class="icon-angle-right icon-angle-right-appearance" style="padding-right:1rem"></div>
+            <div class="clear"></div>
+        </a>
+    </li>
+    <li>
+        <a href="m-get-invoice.html">
+            <div class="m-choose-detail m-address-display">
+                <div class="m-choose-title" style="margin-top: 2.4rem">
+                    索要发票
+                </div>
+
+            </div>
+            <div class="icon-angle-right icon-angle-right-appearance" style="padding-right:1rem"></div>
+            <div class="clear"></div>
+        </a>
+    </li>
+</ul>
 
 <div class="m-check-pay-area">
     <div class="m-check-total-money">
