--- a/site/m-shoppingCart.html
+++ b/site/m-shoppingCart.html
@@ -15,6 +15,9 @@
 <nav>
     <div class="icon-home icon-home-appearance icon-active" ></div>
     <h3 class=" head-title-appearance">购物车</h3>
+    <a href="m-center.html">
+        <div class="icon-user icon-user-appearance icon-active"></div>
+    </a>
     <a href="m-shoppingCart.html">
         <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
     </a>
@@ -23,9 +26,9 @@
 <div class="m-shopping-cart-new mb0">
     <ul class="m-choose-product-new">
         <li>
-            <div class="icon-remove-circle delete-order-button">
+            <div class=" delete-order-button">
             </div>
-            <div class="fl" style="width: 60%">
+            <div class="m-shopping-cart-detail">
                 <div class="m-choose-detail">
                     <div class="m-choose-title">
                         中国道中国道
@@ -34,17 +37,18 @@
                         第一次，重新定义白酒!
                     </div>
                 </div>
+
+            </div>
+
+            <div class="m-choose-detail-next">
                 <div class="m-choose-detail m-product-number">
                     <div>
-                        <span class="m-product-label color-f66900"  style="font-weight: bold">1</span>
+                        <span class="m-product-label"  >x 1</span>
                     </div>
                     <div>
                         <span class="m-product-label color-f66900" style="font-weight: bold">￥2666</span>
                     </div>
                 </div>
-            </div>
-
-            <div class="m-choose-detail-next">
                 <div class="icon-plus icon-minus-adjust">
                 </div>
                 <div class="icon-minus icon-minus-adjust">
@@ -70,23 +74,21 @@
             <div class="clear"></div>
         </a>
     </li>
-    <li>
-        <a href="m-get-invoice.html">
-            <div class="m-choose-detail m-address-display">
-                <div class="m-choose-title" style="margin-top: 2.4rem">
-                    索要发票
-                </div>
 
-            </div>
-            <div class="icon-angle-right icon-angle-right-appearance" style="padding-right:1rem"></div>
-            <div class="clear"></div>
-        </a>
-    </li>
 </ul>
+
+<div class="m-order-detail-partThree">
+    <div class=" ml1" style="margin-top: 9rem">
+          <div class="m-choose-brief-detail">
+              *国馆酒类产品均采用顺风陆运，物流费用由国馆公司承担
+          </div>
+    </div>
+    <div class="clear"></div>
+</div>
 
 <div class="m-check-pay-area">
     <div class="m-check-total-money">
-        金额合计<span>￥5332</span>
+        合计<span>￥5332</span>
     </div>
     <a href="m-online-pay.html">
         <div class="m-button m-button-check">
