--- a/product/m-product-detail.html
+++ b/product/m-product-detail.html
@@ -35,7 +35,7 @@
 </div>
 
 <!--tab切换页-->
-<div id="tab-container" class='tab-container'>
+<div id="tab-container" class='tab-container' style="border-top: 0.1rem solid #ebebeb">
     <ul class='etabs'>
         <li class='tab'><a href="#tabs1-html">概述</a></li>
         <li class='tab'><a href="#tabs1-js">参数</a></li>
