--- a/site/m-order-search.html
+++ b/site/m-order-search.html
@@ -1,87 +1,82 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>订单查询</title>
+    <title>我的订单</title>
     <meta name="viewport" charset="utf-8" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
     <link rel="stylesheet" href="css/m-cart.css">
+    <script type="text/javascript" src="js/jquery-1.8.0.js"></script>
 </head>
+
 <body>
 <nav>
     <div class="icon-home icon-home-appearance icon-active" ></div>
-    <h3 class=" head-title-appearance">订单查询</h3>
+    <h3 class=" head-title-appearance">我的订单</h3>
     <a href="m-shoppingCart.html">
         <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
     </a>
 </nav>
 <div class="content">
-    <div class="m-shopping-cart">
-        <ul class="m-choose-product">
-            <li>
-                <a href="m-online-pay.html">
-                    <div class="m-choose-image">
-                        <img src="image/mytiem.png">
-                    </div>
-                    <div class="m-choose-detail">
-                        <div class="m-choose-title mt1">
-                            订单日期：2014/4/22
-                        </div>
-                        <div class="m-choose-brief-detail">
-                            订单编号：50599950005999588
-                        </div>
-                        <div class="m-choose-brief-detail">
-                            总价：￥2666 <span class="m-order-payed ml1">订单状态：已付款</span>
-                        </div>
-                    </div>
-                    <div class="icon-angle-right icon-angle-right-appearance"></div>
-                    <div class="clear"></div>
-                </a>
-            </li>
-            <li>
-                <a href="m-online-pay.html">
-                    <div class="m-choose-image">
-                        <img src="image/mytiem.png">
-                    </div>
-                    <div class="m-choose-detail">
-                        <div class="m-choose-title mt1">
-                            订单日期：2014/4/22
-                        </div>
-                        <div class="m-choose-brief-detail">
-                            订单编号：50599950005999588
-                        </div>
-                        <div class="m-choose-brief-detail">
-                            总价：￥2666 <span class="m-order-payed ml1">订单状态：已付款</span>
-                        </div>
-                    </div>
-                    <div class="icon-angle-right icon-angle-right-appearance"></div>
-                    <div class="clear"></div>
-                </a>
-            </li>
-            <li>
-                <a href="m-online-pay.html">
-                    <div class="m-choose-image">
-                        <img src="image/mytiem.png">
-                    </div>
-                    <div class="m-choose-detail">
-                        <div class="m-choose-title mt1">
-                            订单日期：2014/4/22
-                        </div>
-                        <div class="m-choose-brief-detail">
-                            订单编号：50599950005999588
-                        </div>
-                        <div class="m-choose-brief-detail">
-                            总价：￥2666 <span class="m-order-payed ml1">订单状态：已付款</span>
-                        </div>
-                    </div>
-                    <div class="icon-angle-right icon-angle-right-appearance"></div>
-                    <div class="clear"></div>
-                </a>
-            </li>
-        </ul>
-    </div>
+    <ul>
+        <li class="content m-order-detail-content m-online-detail-content-new">
+            <div class="m-order-detail-partTwo " style="padding-top: 0.8rem;">
+                <div class="ml1">
+                    <div><span class="order-title-label">订购时间</span><span>2014-04-27</span></div>
+                </div>
+            </div>
+
+            <div class="m-order-detail-partTwo">
+                <div class="ml1">
+                    <div><span class="order-title-label">订购产品</span><span>国馆中国道 x 7</span><span class="fr mr1 color-f66900">总额：￥5332</span></div>
+                </div>
+            </div>
+            <div class="m-order-detail-partTwo m-order-zhedie" style="border-bottom: none">
+                <div class="ml1">
+                    <div><span class="order-title-label">已受理</span> <span class="color-f66900 fr mr1"><span class="text-plus">+</span><span class="text-minus" style="display: none">-</span> 展开</span></div>
+                </div>
+            </div>
+            <div class="m-order-detail-partTwo mt0" style="display: none; border-bottom: none">
+                <div class="ml1">
+                    <div><span class="order-title-label">订单编号</span><span>5990500009988859</span></div>
+                    <div><span class="order-title-label">收货人称</span><span>谢奇</span></div>
+                    <div><span class="order-title-label">手机号码</span><span>18503014025</span></div>
+                    <div><span class="order-title-label">收货地址</span><span>广东广州市天河区华明路13华普广场东塔702</span></div>
+                    <div><span class="order-title-label">货物状态</span><span>配送中</span></div>
+                </div>
+            </div>
+        </li>
+
+        <li class="content m-order-detail-content m-online-detail-content-new">
+            <div class="m-order-detail-partTwo " style="padding-top: 0.8rem;">
+                <div class="ml1">
+                    <div><span class="order-title-label">订购时间</span><span>2014-04-27</span></div>
+                </div>
+            </div>
+
+            <div class="m-order-detail-partTwo">
+                <div class="ml1">
+                    <div><span class="order-title-label">订购产品</span><span>国馆中国道 x 7</span><span class="fr mr1 color-f66900">总额：￥5332</span></div>
+                </div>
+            </div>
+            <div class="m-order-detail-partTwo m-order-zhedie" style="border-bottom: none">
+                <div class="ml1">
+                    <div><span class="order-title-label">已受理</span><span class="color-f66900 fr mr1"><span class="text-plus">+</span><span class="text-minus" style="display: none">-</span> 展开</span></div>
+                </div>
+            </div>
+            <div class="m-order-detail-partTwo mt0" style="display: none;border-bottom: none">
+                <div class="ml1">
+                    <div><span class="order-title-label">订单编号</span><span>5990500009988859</span></div>
+                    <div><span class="order-title-label">收货人称</span><span>谢奇</span></div>
+                    <div><span class="order-title-label">手机号码</span><span>18503014025</span></div>
+                    <div><span class="order-title-label">收货地址</span><span>广东广州市天河区华明路13华普广场东塔702</span></div>
+                    <div><span class="order-title-label">货物状态</span><span>配送中</span></div>
+                </div>
+            </div>
+        </li>
+    </ul>
 </div>
 
 <div class="footer">
@@ -94,5 +89,16 @@
         </span>
     </div>
 </div>
+
 </body>
+
+<script type="text/javascript">
+    $(function(){
+        $(".m-order-zhedie").click(function(){
+            $(this).next("div.m-order-detail-partTwo").toggle(100);
+            $(this).find("span.text-plus").toggle();
+            $(this).find("span.text-minus").toggle();
+        })
+    })
+</script>
 </html>
