--- a/product/m-product-detail.html
+++ b/product/m-product-detail.html
@@ -89,6 +89,18 @@
     </div>
 </div>
 
+
+<div class="m-product-content">
+    <div class="m-product-title">中国道中国道</div>
+    <div class="m-product-detail">中国道是国馆首款收藏级文化白酒</div>
+    <div class="m-product-price">￥2666</div>
+    <div class="m-button width100 mt1">
+        <div class="m-button-content">
+            立即购买
+        </div>
+    </div>
+</div>
+
 <!--footer-->
 <div class="footer">
     <div>
