--- a/guoguan-front2.0/index.html
+++ b/guoguan-front2.0/index.html
@@ -60,7 +60,7 @@
       	<div class="banner jumbotron banner-bg" >
             <div class="banner-left-content">
                 <div class="banner-left-title">
-                    <img src="images/guoguan-zhongguodao.png">
+                    <img src="images/guoguan-zhongguodao.png" style="width: 50%">
                 </div>
                 <div class="banner-left-bottom">
                     <div class="banner-left-bottom-core">
