--- a/guoguan-front2.0/index.html
+++ b/guoguan-front2.0/index.html
@@ -57,23 +57,25 @@
 				<a href="#" class="text-muted" data-toggle="modal" data-target="#myModal">手机版</a>
 			</div>
 		</nav>
-      	<div class="banner jumbotron banner-bg" >
-            <div class="banner-left-content">
-                <div class="banner-left-title">
-                    <img src="images/guoguan-zhongguodao.png" style="width: 50%">
-                </div>
-                <div class="banner-left-bottom">
-                    <div class="banner-left-bottom-core">
-                        <img src="images/quroe-code.png" width="80" height="80">
+        <a href="www.guoguan.com" style="display: block; height: 100%; width: 100%">
+            <div class="banner jumbotron banner-bg" >
+                <div class="banner-left-content">
+                    <div class="banner-left-title">
+                        <img src="images/guoguan-zhongguodao.png" style="width: 50%">
                     </div>
-                    <div class="banner-left-bottom-text">
-                        我们将在微信发布这款颠覆性的产品，关注微信服务号“国馆酒”guoguanjiu，第一时间了解产品介绍及预售计划！
+                    <div class="banner-left-bottom">
+                        <div class="banner-left-bottom-core">
+                            <img src="images/quroe-code.png" width="80" height="80">
+                        </div>
+                        <div class="banner-left-bottom-text">
+                            我们将在微信发布这款颠覆性的产品，关注微信服务号“国馆酒”guoguanjiu，第一时间了解产品介绍及预售计划！
+                        </div>
                     </div>
                 </div>
+                <p class="text-hide">国馆来了！5.4日，与你不期而遇</p>
+                <p class="button button-zhongguodao"><a class="btn btn-default btn-lg" role="button">了解详情</a></p>
             </div>
-      		<p class="text-hide">国馆来了！5.4日，与你不期而遇</p>
-		  	<p class="button button-zhongguodao"><a class="btn btn-default btn-lg" role="button">了解详情</a></p>
-		</div>
+        </a>
       	<div class="nav-small visible-xs">
       		<div class="container">
       			<div class="row">
