--- a/nextHour/index.html
+++ b/nextHour/index.html
@@ -6,13 +6,15 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="keywords" content="中国道,国馆,国馆网,国馆酒">
     <meta name="description" content="中国道是国馆首款收藏级文化白酒，大师之作，是送礼的绝佳选择，是客厅的装B利器，是不愿轻易分享的收藏级好酒。中国道，这种酒，你只会用来招待最知心的朋友。">
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <!-- css style sheet -->
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
     <link rel="stylesheet" href="css/animations.css">
+
+    <!--可以删除-->
+    <script src="js/jquery-1.8.0.js" type="text/javascript"></script>
 
 
 </head>
@@ -37,7 +39,7 @@
             <ul class="site-nav-list">
                 <li class="site-nav-list-item navigable-list-item" style="margin-top:0.5rem">
                     <a class="site-nav-list-item-btn" title="Go home" href="#" tabindex="-1">
-                        <span class="icons "></span>首页
+                        <span class="icons"></span>首页
                     </a>
                 </li>
                 <li class="site-nav-list-item navigable-list-item" style="margin-top:0.5rem">
@@ -102,45 +104,28 @@
         <div class="surface" style="visibility: visible">
             <div class="site-focus">
                 <div class="site-content">
-                        <div class="site-middle-button" style="text-align: center">
-                            <!--<p class="button"><a class="btn btn-default btn-lg" role="button">了解详情</a></p>-->
-                          <!--  <p class="button" style="margin-bottom: 50px"><a class="btn btn-default btn-lg " id="share-to-sina-button" role="button">分享赢中国道<i class="icon-chevron-right ml10"></i></a></p>-->
+                    <div class="site-title">
+                        <h3>文化下一小时</h3>
+                    </div>
+                    <div class="site-middle-button" style="text-align: center">
+                        <p class="button" style="margin-bottom: 50px"><a class="btn btn-default btn-lg " id="share-to-sina-button" role="button">分享赢中国道<i class="icon-chevron-right ml10"></i></a></p>
 
-                            <!-- Baidu Button BEGIN -->
-                            <div class="bdsharebuttonbox">
-                                <a href="#" class="bds_tsina btn btn-default btn-lg "  id="share-to-sina-button" style="height: 38px; line-height: 38px; margin-bottom: 50px; display: inline-block; background-image: none;" data-cmd="tsina" title="分享到新浪微博">
-                                    <i class="icon-share mr5"></i>分享，赢中国道<i class="icon-chevron-right ml10"></i></a>
-                                <!--<p class="button"><a class="btn btn-default btn-lg" role="button">立即预约<i class="icon-chevron-right ml10"></i></a></p>
-                                  <p class="button" style="margin-bottom: 50px; margin-left: 10px"><a class="btn btn-default btn-lg " id="share-to-sina-button" role="button">了解国馆可乐<i class="icon-chevron-right ml10"></i></a></p>-->
-                            </div>
-
-                            <!-- Baidu Button END -->
-                        </div>
-
-
-
+                    </div>
                 </div>
             </div>
             <footer class="footer footer-fixed footer-promotional btn-set layout-single-column">
-                <!--<a class="btn btn-link" title="">国馆首页</a>
-                <a class="btn btn-link" title="" href="">每日一文</a>
-                <a class="btn btn-link" title="" href="">国馆电台</a>-->
+                <a class="btn btn-link" title="">听个段子</a>
+                <a class="btn btn-link" title="" href="">来篇文章</a>
+                <a class="btn btn-link" title="" href="">月光宝盒</a>
             </footer>
         </div>
     </div>
 
 <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-<script type="text/javascript" src="js/option.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="http://cdn.bootcss.com/html5shiv/3.7.0/html5shiv.min.js"></script>
-    <script src="http://cdn.bootcss.com/respond.js/1.3.0/respond.min.js"></script>
 
-    <![endif]-->
 <script>
     var isHiden = true; /*控制切换菜单*/
 
