--- a/nextHour/index.html
+++ b/nextHour/index.html
@@ -105,7 +105,27 @@
             <div class="site-focus">
                 <div class="site-content">
                     <div class="site-title">
-                        <h3>文化下一小时</h3>
+                        <h4>文化下一小时</h4>
+                    </div>
+                    <div class="next-hour-content">
+                        <div class="next-hour-time">
+                            <div class="next-hour-time-left inlinebl">
+                               <span>Hours</span>
+                                <div class="next-hour-time-number">
+                                    09
+                                </div>
+                            </div>
+                            <div class="next-hour-time-middle inlinebl">
+                                <div class="white-dot" style="margin-bottom: 10px"></div>
+                                <div class="white-dot"></div>
+                            </div>
+                            <div class="next-hour-time-right inlinebl">
+                                <span>Minutes</span>
+                                <div class="next-hour-time-number">
+                                    00
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="site-middle-button" style="text-align: center">
                         <p class="button" style="margin-bottom: 50px"><a class="btn btn-default btn-lg " id="share-to-sina-button" role="button">分享赢中国道<i class="icon-chevron-right ml10"></i></a></p>
@@ -113,7 +133,7 @@
                     </div>
                 </div>
             </div>
-            <footer class="footer footer-fixed footer-promotional btn-set layout-single-column">
+            <footer class=" footer-fixed footer-promotional btn-set layout-single-column">
                 <a class="btn btn-link" title="">听个段子</a>
                 <a class="btn btn-link" title="" href="">来篇文章</a>
                 <a class="btn btn-link" title="" href="">月光宝盒</a>
