--- a/nextHour/index.html
+++ b/nextHour/index.html
@@ -139,7 +139,7 @@
                 <a class="btn btn-link" title="">听个段子</a>
                 <a class="btn btn-link" title="" href="">来篇文章</a>
                 <a class="btn btn-link" title="" href="">月光宝盒</a>
-                <div class="floating" style="width: 100%;  margin-left:auto; margin-right:auto; margin-top:30px; margin-bottom:30px; color:#d0d0d0">
+                <div class="floating" style="width: 100%;  margin-left:auto; margin-right:auto; margin-top:30px; margin-bottom:30px; color:#fff; font-size:24px;">
                     <i class="icon-angle-down "></i>
                 </div>
             </footer>
